# perfectengine

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
src/: cpu_renderer.rs  event_callback.rs  event_handler.rs  gpu_renderer.rs  light.rs  main.rs  operations.rs  pixel.rs  renderer.rs  shader.wgsl  test_helper.rs  uniforms.rs
src/events/: event_handler.rs
src/graphics/: cpu_renderer.rs  gpu_renderer.rs  lighting_shader.wgsl  mod.rs  operations.rs  projection_shader.wgsl  raytracing_shader.wgsl  shader.wgsl
src/graphics/cpu/: cpu_renderer.rs  mod.rs  operations.rs
src/graphics/gpu/: gpu_renderer.rs  mod.rs  shader.wgsl
src/helpers/: mod.rs  operations.rs  test_helper.rs
src/helpers/model_helper/: mesh_script.geo  mod.rs  tea_pot.stp
src/types/: event_callback.rs  mod.rs  object.rs  pixel.rs  renderer.rs  uniforms.rs  view_state.rs
